sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var sorted = false
def bubbleSort()  {
	while (!sorted){
		trie = true
		for (i <- 1 to getNombreValeurs-1){
			if (plusPetit(i,i-1)==true){
				echange(i,i-1)
				sorted = false
			}
		}
	}
}
